# journald-desktop-notifier

./: Cargo.toml  README.md  flake.nix
src/: config.rs  main.rs
test_data/: config.json  config.toml
