[package]
name = "journald-desktop-notifier"
version = "0.1.0"
authors = ["Axel Karjalainen <axel@axka.fi>"]
edition = "2024"
description = "System journal error notifier"
readme = "README.md"
repository = "https://github.com/axelkar/journald-desktop-notifier"
license = "MIT OR Apache-2.0"

[dependencies]
color-eyre = { version = "0.6.3", default-features = false }
fs-err = { version = "3.1.0", features = ["expose_original_error"] }
systemd = "0.10.0"
notify-rust = "4.11.6"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
try-iterator = "1.0.0"
itertools = "0.14.0"
